--- a/frontend/src/app/_components/header/header.component.scss
+++ b/frontend/src/app/_components/header/header.component.scss
@@ -1,5 +1,8 @@
 .header{height: 50px;background: #e3e3e6;
     ul{display: flex;    align-items: flex-end;
-       li{ margin-left: auto;list-style: none;}
+       li{ list-style: none;
+            &.align{margin-left: auto;}
+            a{display: inline-block;padding: 10px;}
+        }
     }
 }
