--- a/frontend/src/app/_modules/user/_pages/detail/detail.component.html
+++ b/frontend/src/app/_modules/user/_pages/detail/detail.component.html
@@ -1,5 +1,5 @@
 <h1>User Detail</h1>
 <ul *ngIf="user">
-    <li>User Id = {{user.id}}</li>
+    <li>User Id = {{user._id}}</li>
     <li>User Name = {{user.name}}</li>
 </ul>
