--- a/frontend/src/app/_components/header/header.component.html
+++ b/frontend/src/app/_components/header/header.component.html
@@ -5,6 +5,6 @@
     </ul>
     <ul *ngIf="currentUser">
         <li class="align">{{currentUser.email}}</li>
-        <li><a >Logout</a></li>
+        <li><a (click)="logout()">Logout</a></li>
     </ul>
 </header>
