--- a/frontend/src/app/_pages/work-space/work-space.component.html
+++ b/frontend/src/app/_pages/work-space/work-space.component.html
@@ -1,17 +1,13 @@
-<form [formGroup]="demoForm"  (ngSubmit)="onSubmit()">
-    dfd
+<form [formGroup]="demoForm" (ngSubmit)="onSubmit()">
     <div formArrayName="items">
-        <div *ngFor="let item of items.controls; let i = index" [formGroupName] = i>
+        <ng-container *ngFor="let item of f.controls; let i=index" [formGroupName]="i">
             <div class="field">
-                <label>label {{i + 1}}</label>
-                <input type="text" formControlName = "name">
+                <label>name</label>
+                <input type="text" formControlName="name">
             </div>
-            <button (click)="removeItem(i)">delete</button>
-        </div>
+            <button (click)="deleteRow(i)">Delete</button>
+        </ng-container>
     </div>
-    <div>
-        <button  (click)="addItem()">Add Item</button>
-        <button >Submit</button>
-    </div>
-    
+    <button (click)="addItem()">Add</button>
+    <button type="submit">Submit</button>
 </form>
