--- a/frontend/src/app/_modules/user/_pages/chat/chat.component.scss
+++ b/frontend/src/app/_modules/user/_pages/chat/chat.component.scss
@@ -1,3 +1,5 @@
+.sideNav{width: 200px;height: 100vh;position: fixed;background: #ddd;}
+.chatSection{margin-left: 200px;}
 ul {
     list-style: none;
     padding: 0;
